--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -289,6 +289,276 @@
             </form>
           </div>
         </div>
+        <div class="prd-list-wrap">
+          <p class="total-num">전체<span>16</span>건</p>
+          <div class="prd-list-box">
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이수학</h3>
+                  <p class="subtxt">연산력 완성으로 수학 자신감이 무럭무럭!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list02.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이놀이똑똑</h3>
+                  <p class="subtxt">놀이활동북과 똑똑교구로 자기주도성이 무럭무럭!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list03.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">써밋스피드수학</h3>
+                  <p class="subtxt">AI기반으로 더 쉽게! 더 빠르게!<br>더 재미있게!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list04.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이사고력수학</h3>
+                  <p class="subtxt">문제해결능력으로 창의력과 사고력이 쑥쑥!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list05.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이스쿨수학</h3>
+                  <p class="subtxt">연산력 완성으로 수학 자신감이 무럭무럭!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list06.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이창의독서</h3>
+                  <p class="subtxt">책 읽는 재미로 독서 습관과 표현력, 창의력이 쑥쑥</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list07.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이국어</h3>
+                  <p class="subtxt">56가지 양식의1,500여 편의 글감으로 종합적인 국어 능력을 키워주는 눈높이국어</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list08.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이영역국어</h3>
+                  <p class="subtxt">부족한 부분만 콕 짚어서 진단하는 "국어 영역별 맞춤 진단 클리닉"</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list09.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이스쿨국어</h3>
+                  <p class="subtxt">국어 교과서 중심으로 학교 시험 만만, 내신관리 탄탄!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list10.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이영어똑똑</h3>
+                  <p class="subtxt">재미있는 애니메이션과 다양한 활동으로 영어와 친해지는 유아영어전문 프로그램</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list11.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">눈높이영어</h3>
+                  <p class="subtxt"> 4대영역을 골고루, 영어를 자신있게!</p>
+                </div>
+              </label>
+            </div>
+            <div class="prd">
+              <input type="checkbox" id="" class="prdchkB">
+              <label for="">
+                <div class="thumb">
+                  <img src="../../resource/img/prd/prd_list12.jpg" alt="">
+                  <div class="hover-cont">
+                    <div>
+                      <p class="hashtag"><span>#눈높이수학</span><span>#수학공부</span></p>
+                      <a href="" class="morebtn">자세히보기</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="info">
+                  <h3 class="title">I Listening</h3>
+                  <p class="subtxt">주제별(Theme-based) 학습을 통해 영어 듣기 실력이 탄탄!</p>
+                </div>
+              </label>
+            </div>
+          </div>
+        </div>
+        <div class="paging paging-type-a">
+          <ul class="paging-box">
+            <li>
+              <a href="" class="first">처음으로</a>
+            </li>
+            <li>
+              <a href="" class="prev">이전</a>
+            </li>
+            <li>
+              <a href="" class="number active">1</a>
+            </li>
+            <li>
+              <a href="" class="number">2</a>
+            </li>
+            <li>
+              <a href="" class="number">3</a>
+            </li>
+            <li>
+              <a href="" class="number">4</a>
+            </li>
+            <li>
+              <a href="" class="number">5</a>
+            </li>
+            <li>
+              <a href="" class="number">6</a>
+            </li>
+            <li>
+              <a href="" class="number">7</a>
+            </li>
+            <li>
+              <a href="" class="number">8</a>
+            </li>
+            <li>
+              <a href="" class="number">9</a>
+            </li>
+            <li>
+              <a href="" class="number">10</a>
+            </li>
+            <li>
+              <a href="" class="next">다음</a>
+            </li>
+            <li>
+              <a href="" class="last">마지막으로</a>
+            </li>
+          </ul>
+        </div>
+        <div class="prd-list-banner">
+          <img src="../../resource/img/prd/prd_banner.jpg" alt="">
+        </div>
       </div>
     </div>
     <div class="footer">
