커뮤니티 썸네일 hover

--- a/noonno/html/community/education_list.html
+++ b/noonno/html/community/education_list.html
@@ -139,7 +139,7 @@
           <p class="total-num">전체<span>32</span>건</p>
           <ul class="board-box board-gallery">
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu01.png" alt="">
                 </div>
@@ -150,7 +150,7 @@
               </a>
             </li>
             <li>
-              <a href="./education_view.html" class="board">
+              <a href="./education_view.html" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu02.png" alt="">
                 </div>
@@ -161,7 +161,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu03.png" alt="">
                 </div>
@@ -172,7 +172,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu04.png" alt="">
                 </div>
@@ -183,7 +183,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu05.png" alt="">
                 </div>
@@ -194,7 +194,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu06.png" alt="">
                 </div>
@@ -205,7 +205,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu07.png" alt="">
                 </div>
@@ -216,7 +216,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/edu08.png" alt="">
                 </div>
