--- a/noonno/html/community/news_notice_list.html
+++ b/noonno/html/community/news_notice_list.html
@@ -140,7 +140,7 @@
           <p class="total-num">전체<span>32</span>건</p>
           <ul class="board-box board-gallery">
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-7.png" alt="">
                 </div>
@@ -151,7 +151,7 @@
               </a>
             </li>
             <li>
-              <a href="./news_notice_view.html" class="board">
+              <a href="./news_notice_view.html" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-6.png" alt="">
                 </div>
@@ -162,7 +162,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-5.png" alt="">
                 </div>
@@ -173,7 +173,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-4.png" alt="">
                 </div>
@@ -184,7 +184,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-3.png" alt="">
                 </div>
@@ -195,7 +195,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-2.png" alt="">
                 </div>
@@ -206,7 +206,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91-1.png" alt="">
                 </div>
@@ -217,7 +217,7 @@
               </a>
             </li>
             <li>
-              <a href="" class="board">
+              <a href="" class="board hov-event">
                 <div class="thumb">
                   <img src="../../resource/img/Rectangle 91.png" alt="">
                 </div>
