--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -286,6 +286,20 @@
                   </div>
                 </div>
               </div>
+              <div class="prd-search-reset">
+                <button type="reset" class="reset">
+                  <div>
+                    <img src="../../resource/img/prd/prd_reset.png" alt="">
+                    <span>초기화</span>
+                  </div>
+                </button>
+                <button type="submit" class="search">
+                  <div>
+                    <img src="../../resource/img/prd/prd_ser.png" alt="">
+                    <span>검색하기</span>
+                  </div>
+                </button>
+              </div>
             </form>
           </div>
         </div>
@@ -560,6 +574,36 @@
           <img src="../../resource/img/prd/prd_banner.jpg" alt="">
         </div>
       </div>
+    </div>
+    <div class="compare_box">
+      <div class="tit">
+        <div class="txt01">비교하기</div>
+        <div class="txt02"><span>최대 3개 제품</span>에 대한 내용을 비교 확인하실 수 있습니다</div>
+        <div class="btn">
+          <span class="blind"></span>
+        </div>
+      </div>
+      <div class="desc">
+        <div class="list">
+          <div class="on">
+            <div class="del"><span class="blind"></span></div>
+            <div class="img"><img src="../../resource/img/main/thumb.png"></div>
+            <div class="desc">눈높이수학</div>
+          </div>
+          <div class="on">
+            <div class="del"><span class="blind"></span></div>
+            <div class="img"><img src="../../resource/img/main/thumb.png"></div>
+            <div class="desc">눈높이수학</div>
+          </div>
+          <div>
+            <div class="del"><span class="blind"></span></div>
+            <div class="img"></div>
+            <div class="desc">제품을 선택해주세요</div>
+          </div>
+        </div>
+
+      </div>
+      <div class="btn_wrap"><a class="compare_btn" href="#">비교하기</a></div>
     </div>
     <div class="footer">
       <div class="foot_top">
