--- a/noonno/html/main/main.html
+++ b/noonno/html/main/main.html
@@ -10,6 +10,8 @@
   <link href="../../resource/css/common.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/common_kim.css" rel="stylesheet" type="text/css"/>
   <link href="../../resource/css/swiper.css" rel="stylesheet" type="text/css"/>
+  <link href="../../resource/css/products.css" rel="stylesheet" type="text/css"/>
+
   <script type="text/javascript" src="../../resource/js/jquery-1.8.2.min.js"></script>
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
 
@@ -20,7 +22,7 @@
 
 </head>
 <body>
-  <div class="wrap sub">
+  <div class="wrap main">
 
     <div class="gnb_wrap">
       <div class="gnb_top">
@@ -194,29 +196,47 @@
               <div class="tab_cont_sec">
                 <div class="tit">#연산력<br>#수학자신감</div>
                 <div class="list">
-                  <ul>
+                  <ul class="prd-list-box">
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_0111" class="compare_check">
-                          <label for="check01_0111"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont0" class="prdchkB">
+                        <label for="prdcont0">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont1" class="prdchkB">
+                        <label for="prdcont1">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont2" class="prdchkB">
+                        <label for="prdcont2">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                   </ul>
@@ -225,29 +245,47 @@
               <div class="tab_cont_sec">
                 <div class="tit">#창의력<br>#표현력</div>
                 <div class="list">
-                  <ul>
+                  <ul class="prd-list-box">
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont4" class="prdchkB">
+                        <label for="prdcont4">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont5" class="prdchkB">
+                        <label for="prdcont5">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont6" class="prdchkB">
+                        <label for="prdcont6">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                   </ul>
@@ -256,29 +294,47 @@
               <div class="tab_cont_sec">
                 <div class="tit">#학교내신대비<br>#스마트학습</div>
                 <div class="list">
-                  <ul>
+                  <ul class="prd-list-box">
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont7" class="prdchkB">
+                        <label for="prdcont7">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont8" class="prdchkB">
+                        <label for="prdcont8">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont9" class="prdchkB">
+                        <label for="prdcont9">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                   </ul>
@@ -287,29 +343,47 @@
               <div class="tab_cont_sec">
                 <div class="tit">#개인별능력별<br>#맞춤진단</div>
                 <div class="list">
-                  <ul>
+                  <ul class="prd-list-box">
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont10" class="prdchkB">
+                        <label for="prdcont10">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont11" class="prdchkB">
+                        <label for="prdcont11">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                     <li>
-                      <div class="img"><img src="../../resource/img/main/thumb.png"></div>
-                      <div class="tit">눈높이국어</div>
-                      <div class="check_box">
-                          <input type="checkbox" id="check01_01" class="compare_check">
-                          <label for="check01_01"></label>
+                      <div class="prd">
+                        <input type="checkbox" id="prdcont12" class="prdchkB">
+                        <label for="prdcont12">
+                          <div class="thumb">
+                            <img src="../../resource/img/prd/prd_list01.jpg" alt="">
+
+                          </div>
+                          <div class="info">
+                            <h3 class="title">눈높이수학</h3>
+                          </div>
+                        </label>
                       </div>
                     </li>
                   </ul>
@@ -376,7 +450,7 @@
         </div>
 
       </div>
-      <div class="btn_wrap"><a class="compare_btn" href="#">비교하기</a></div>
+      <div class="btn_wrap"><a class="compare_btn" href="#" onclick="layerPopOpen('comparePop')">비교하기</a></div>
     </div>
     <div class="footer">
       <div class="foot_top">
@@ -453,6 +527,70 @@
     </div>
 
   </div>
+  <div id="comparePop" class="wrap_layer_pop">
+      <div class="layer_pop">
+          <div class="header_pop">
+              <button class="btn-pop-close" onclick="layerPopClose('comparePop')"><span class="blind">팝업닫기</span></button>
+          </div>
+          <div class="container_pop">
+              <div class="tit">비교하기</div>
+              <div class="desc"><span>최대 3개 제품</span>에 대한 내용을 비교 확인하실 수 있습니다</div>
+              <div class="compare_table">
+                <ul class="img_area">
+                  <li>
+                    <div class="img"><img src="../../resource/img/sub/compare01.png" alt=""></div>
+                    <div class="tit">눈높이놀이똑똑</div>
+                  </li>
+                  <li>
+                    <div class="img"><img src="../../resource/img/sub/compare02.png" alt=""></div>
+                    <div class="tit">눈높이수학똑똑</div>
+                  </li>
+                  <li>
+                    <div class="img"><img src="../../resource/img/sub/compare03.png" alt=""></div>
+                    <div class="tit">눈높이수학</div>
+                  </li>
+                </ul>
+                <table cellpadding="0" cellspacing="0">
+                  <colgroup>
+                    <col width="135px">
+                    <col width="">
+                    <col width="">
+                    <col width="">
+                  </colgroup>
+                  <tbody>
+                    <tr>
+                      <th>학습연령</th>
+                      <td>영유아</td>
+                      <td>유아</td>
+                      <td>유아,초등,중등,고등</td>
+                    </tr>
+                    <tr>
+                      <th>학습형태</th>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                    </tr>
+                    <tr>
+                      <th>제품소개</th>
+                      <td>놀이활동북과 똑똑교구로<br>
+                      자기주도성이 무럭무럭!</td>
+                      <td>입체적인 놀이 학습으로<br>
+                      수 개념과 창의력이 차곡차곡!</td>
+                      <td>연산력 완성으로<br>
+                      수학 자신감이 무럭무럭!</td>
+                    </tr>
+                    <tr>
+                      <th></th>
+                      <td><a href="#">자세히 보기</a></td>
+                      <td><a href="#">자세히 보기</a></td>
+                      <td><a href="#">자세히 보기</a></td>
+                    </tr>
+                  </tbody>
+                </table>
 
+              </div>
+          </div>
+      </div>
+  </div>
 </body>
 </html>
