--- a/noonno/html/user_service/olympiad.html
+++ b/noonno/html/user_service/olympiad.html
@@ -144,6 +144,7 @@
 				<div class="s_tit">(눈높이올림피아드 명예의 전당)</div>
 				<div class="desc">눈높이올림피아드 수상자에게 매년 포인트를 제공, 적립하여 고교 입학시 장학금 지급</div>
 				<div class="brown_box">
+                    <div class="brown_box_in">
 					<div class="tit">자격요건</div>
 					<div class="desc">
 						<ul>
@@ -151,6 +152,7 @@
 							<li>- 1회 수상 구간별 포인트</li>
 						</ul>
 					</div>
+                    </div>
 				</div>
 			</div>
         </div>
@@ -163,7 +165,7 @@
 				<div class="btn_wrap">
 					<a href="#">기출문제 확인하기</a>
 				</div>
-			
+
 			</div>
         </div>
         <div class="section" id="section3">
@@ -175,7 +177,7 @@
 				<div class="btn_wrap">
 					<a href="#">결과조회 확인하기</a>
 				</div>
-			
+
 			</div>
         </div>
         <div class="section" id="section4">
@@ -190,7 +192,7 @@
 				</div>
 			</div>
         </div>
-      
+
         <div class="section fp-auto-height" id="section5">
             <div class="footer">
               <div class="foot_top">
