--- a/noonno/work_list_ko.html
+++ b/noonno/work_list_ko.html
@@ -157,7 +157,7 @@
       <col>
     </colgroup>
     <tbody>
-    <tr class="ok">
+    <tr class="">
       <td>메인</td>
       <td rowspan="0">메인</td>
       <td></td>
@@ -188,6 +188,62 @@
       <td></td>
       <td rowspan="0">user_service</td>
       <td><a href="html/user_service/olympiad.html" target="_blank">olympiad</a></td>
+      <td class=""></td>
+    </tr>
+
+  </table>
+    <h2>눈높이 소개</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="ok">
+      <td rowspan="2">눈높이 소개</td>
+      <td rowspan="">브랜드 스토리</td>
+      <td></td>
+      <td></td>
+      <td rowspan="2">about</td>
+      <td><a href="html/about/brand_story.html" target="_blank">brand_story</a></td>
+      <td class=""></td>
+    </tr>
+    <tr class="ok">
+
+      <td rowspan="">눈높이학습서비스</td>
+      <td></td>
+      <td></td>
+
+      <td><a href="html/about/edu_service.html" target="_blank">edu_service</a></td>
+      <td class=""></td>
+    </tr>
+
+  </table>
+
+<h2>제품소개</h2>
+  <table>
+    <colgroup>
+      <col width="10%">
+      <col width="15%">
+      <col width="15%">
+      <col width="20%">
+      <col width="10%">
+      <col width="10%">
+      <col>
+    </colgroup>
+    <tbody>
+    <tr class="">
+      <td>제품소개</td>
+      <td rowspan="0">produsts_list</td>
+      <td></td>
+      <td></td>
+      <td rowspan="0">products</td>
+      <td><a href="html/products/products_list.html" target="_blank">products_list</a></td>
       <td class=""></td>
     </tr>
 
