--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -15,7 +15,7 @@
   <script type="text/javascript" src="../../resource/js/jquery-ui.min.js"></script>
   <script type="text/javascript" src="../../resource/js/design_common.js"></script>
   <script type="text/javascript" src="../../resource/js/plugin.js"></script>
-  <script type="text/javascript" src="../../resource/js/board_event.js" ></script>  
+  <script type="text/javascript" src="../../resource/js/board_event.js" ></script>
   <script type="text/javascript" src="../../resource/js/products.js"></script>
 </head>
 <body>
@@ -130,7 +130,7 @@
       </div>
       <!-- 제품리스트 -->
       <div class="inner">
-        <h2 class="sub-tit">제품소개</h2> 
+        <h2 class="sub-tit">제품소개</h2>
         <div class="prd-search-wrap">
           <div>
             <form action="" id="prd-search" class="prd-search-form">
@@ -678,6 +678,74 @@
 
       </div>
     </div>
+  </div>
+   <div id="comparePop" class="wrap_layer_pop">
+      <div class="layer_pop">
+          <div class="header_pop">
+              <button class="btn-pop-close" onclick="layerPopClose('comparePop')"><span class="blind">팝업닫기</span></button>
+          </div>
+          <div class="container_pop">
+              <div class="tit">비교하기</div>
+              <div class="desc"><span>최대 3개 제품</span>에 대한 내용을 비교 확인하실 수 있습니다</div>
+              <div class="compare_table">
+
+                <table cellpadding="0" cellspacing="0">
+                  <colgroup>
+                    <col width="90px">
+                    <col width="">
+                    <col width="">
+                    <col width="">
+                  </colgroup>
+                  <tbody>
+                    <tr>
+                      <td></td>
+                      <td>
+                        <div class="img"><img src="../../resource/img/sub/compare01.png" alt=""></div>
+                        <div class="tit">눈높이놀이똑똑</div>
+                      </td>
+                      <td>
+                        <div class="img"><img src="../../resource/img/sub/compare02.png" alt=""></div>
+                        <div class="tit">눈높이수학똑똑</div>
+                      </td>
+                      <td>
+                        <div class="img"><img src="../../resource/img/sub/compare03.png" alt=""></div>
+                        <div class="tit">눈높이수학</div>
+                      </td>
+                    </tr>
+
+                    <tr>
+                      <th>학습연령</th>
+                      <td>영유아</td>
+                      <td>유아</td>
+                      <td>유아,초등,중등,고등</td>
+                    </tr>
+                    <tr>
+                      <th>학습형태</th>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                      <td>방문학습,전화/화상,학원/센터</td>
+                    </tr>
+                    <tr>
+                      <th>제품소개</th>
+                      <td>놀이활동북과 똑똑교구로<br>
+                      자기주도성이 무럭무럭!</td>
+                      <td>입체적인 놀이 학습으로<br>
+                      수 개념과 창의력이 차곡차곡!</td>
+                      <td>연산력 완성으로<br>
+                      수학 자신감이 무럭무럭!</td>
+                    </tr>
+                    <tr>
+                      <th></th>
+                      <td><a href="#">자세히 보기</a></td>
+                      <td><a href="#">자세히 보기</a></td>
+                      <td><a href="#">자세히 보기</a></td>
+                    </tr>
+                  </tbody>
+                </table>
+
+              </div>
+          </div>
+      </div>
   </div>
 
 </body>
