온클릭이벤트추가

--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -603,7 +603,7 @@
         </div>
 
       </div>
-      <div class="btn_wrap"><a class="compare_btn" href="#">비교하기</a></div>
+      <div class="btn_wrap"><a class="compare_btn"  onclick="layerPopOpen('comparePop')" href="#">비교하기</a></div>
     </div>
     <div class="footer">
       <div class="foot_top">
