--- a/noonno/html/user_service/olympiad.html
+++ b/noonno/html/user_service/olympiad.html
@@ -186,8 +186,88 @@
 				<div class="arco_list">
 					<ul>
 						<li>
-							<div class=""></div>
+							<div class="tit"><div class="left">Q.</div><div class="right">눈높이올리미파드 접수는 어떻게 하나요?</div></div>
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    25회 눈높이올림피아드부터 대회 접수 방법이 변경되었습니다.
+                                    기존에는 눈높이선생님을 통해 참가 접수를 했으나,
+                                    눈높이회원의 편리함을 위해 눈높이사이트 또는 눈높이APP에서 회원이 직접 접수를 해야 합니다.
+                                    두 곳에서의 접수 방법은 동일하며, 회원은 부모님의 도움을 받아 접수할 것을 권장합니다.
+                                    </div>
+                                </div>
+                            </div>
 						</li>
+                        <li>
+                            <div class="tit"><div class="left">Q.</div><div class="right">고사장은 언제 확인 가능한가요?</div></div>
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    25회 눈높이올림피아드부터 대회 접수 방법이 변경되었습니다.
+                                    기존에는 눈높이선생님을 통해 참가 접수를 했으나,
+                                    눈높이회원의 편리함을 위해 눈높이사이트 또는 눈높이APP에서 회원이 직접 접수를 해야 합니다.
+                                    두 곳에서의 접수 방법은 동일하며, 회원은 부모님의 도움을 받아 접수할 것을 권장합니다.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit"><div class="left">Q.</div><div class="right">기출문제는 어떻게 확인할 수 있나요?</div></div>
+
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    눈높이회원이면 누구나 눈높이사이트에서 무료로 학년별 기출문제 조회 및 출력이 가능합니다.(로그인 필수)
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit"><div class="left">Q.</div><div class="right">응시 자격이 어떻게 되나요?</div></div>
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    수학 : 초등2~중등2 국어, 영어 : 초등3~중등2 중 <br>
+                                    시험일 기준 1년 이상 연속 학습 중인 회원이면 응시할 수 있습니다.<br>
+                                    1년 미만이라도 눈높이선생님 추천에 의해 선정되었을 경우 응시가 가능 합니다.(단, 수상에서는 제외됨)
+                                    눈높이선생님에게 문의해 주세요!
+                                    </div>
+                                </div>
+                            </div>
+
+                        </li>
+                        <li>
+                            <div class="tit"><div class="left">Q.</div><div class="right">시험과목이 어떻게 되나요?</div></div>
+
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    시험 과목은 수학, 국어, 영어 입니다.<br>
+                                    수학 : 눈높이수학, 사고력수학을 포함한 수학 계열 과목을 시험일 기준 1년 이상 연속 학습하고 있는 회원<br>
+                                    국어 : 눈높이국어를 포함한 국어 계열 과목을 시험일 기준 1년 이상 연속 학습하고 있는 회원<br>
+                                    영어 : 눈높이영어를 포함한 영어 계열 과목을 시험일 기준 1년 이상 연속 학습하고 있는 회원
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="tit"><div class="left">Q.</div><div class="right">시험 당일 준비물이 있나요?</div></div>
+
+                            <div class="hidden">
+                                <div class="hidden_flex">
+                                    <div class="left">A.</div>
+                                    <div class="right">
+                                    시험 당일 수험표를 꼭 지참하시고, 시험을 위해 컴퓨터용 사인펜과 연필, 지우개를 준비해 주세요.<br>
+                                    *수험표와 고사장 정보는 9월 말 눈높이사이트에서 확인 가능 합니다.
+                                    </div>
+                                </div>
+                            </div>
+                        </li>
 					</ul>
 				</div>
 			</div>
