--- a/noonno/html/products/products_list.html
+++ b/noonno/html/products/products_list.html
@@ -599,18 +599,18 @@
         <div class="list">
           <div>
             <div class="del"><span class="blind"></span></div>
-            <div class="img"><img></div>
-            <div class="desc">눈높이수학</div>
+            <div class="img"><img src="" alt=""></div>
+            <div class="desc"></div>
+          </div>
+          <div>
+            <div class="del"><span class="blind"></span></div>
+            <div class="img"><img src="" alt=""></div>
+            <div class="desc"></div>
           </div>
           <div>
             <div class="del"><span class="blind"></span></div>
             <div class="img"><img></div>
-            <div class="desc">눈높이수학</div>
-          </div>
-          <div>
-            <div class="del"><span class="blind"></span></div>
-            <div class="img"><img></div>
-            <div class="desc">제품을 선택해주세요</div>
+            <div class="desc"></div>
           </div>
         </div>
 
